src/objects/Apttus_Config2__PriceMatrixEntry__c.object
<CustomObject>
    <description>Represents a single entry in a price matrix</description>
    <fields>
        <fullName>Apttus_Config2__AdjustmentAmount__c</fullName>
        <description>The price adjustment amount.</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentType__c</fullName>
        <description>The price adjustment type</description>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% Discount</fullName>
                </value>
                <value>
                    <fullName>Discount Amount</fullName>
                </value>
                <value>
                    <fullName>% Markup</fullName>
                </value>
                <value>
                    <fullName>Markup Amount</fullName>
                </value>
                <value>
                    <fullName>List Price Override</fullName>
                </value>
                <value>
                    <fullName>Tier Price</fullName>
                </value>
                <value>
                    <fullName>Price Factor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BandSize__c</fullName>
        <description>The band size for a weighted range</description>
        <label>Band Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Condition__c</fullName>
        <description>The condition specification</description>
        <label>Condition</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension1Value__c</fullName>
        <description>The value for the first dimension</description>
        <label>Dimension 1 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension2Value__c</fullName>
        <description>The value for the second dimension</description>
        <label>Dimension 2 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension3Value__c</fullName>
        <description>The value for the third dimension</description>
        <label>Dimension 3 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EndFactor__c</fullName>
        <description>The end factor for a weighted range.</description>
        <label>End Factor</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EntryKey__c</fullName>
        <description>The entry key used in keyed matrix pricing. Only applicable to dimension matrix.</description>
        <externalId>true</externalId>
        <inlineHelpText>The entry key used in keyed matrix pricing. Only applicable to dimension matrix.</inlineHelpText>
        <label>Entry Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FlatPrice__c</fullName>
        <description>The flat price for the tier</description>
        <inlineHelpText>The flat price for the tier</inlineHelpText>
        <label>Flat Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsIncluded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the tier is included</description>
        <inlineHelpText>Indicates whether the tier is included</inlineHelpText>
        <label>Is Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodEndDate__c</fullName>
        <description>The period end date</description>
        <inlineHelpText>The period end date</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodStartDate__c</fullName>
        <description>The period start date</description>
        <inlineHelpText>The period start date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceMatrixId__c</fullName>
        <description>ID of the associated matrix</description>
        <label>Price Matrix</label>
        <referenceTo>Apttus_Config2__PriceMatrix__c</referenceTo>
        <relationshipLabel>Entries</relationshipLabel>
        <relationshipName>MatrixEntries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceOverride__c</fullName>
        <description>The price override</description>
        <label>Price Override</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The matrix entry sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StartFactor__c</fullName>
        <description>The start factor for a weighted range.</description>
        <label>Start Factor</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TierEndValue__c</fullName>
        <description>The tier end value</description>
        <inlineHelpText>The tier end value</inlineHelpText>
        <label>To</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TierStartValue__c</fullName>
        <description>The tier start value</description>
        <inlineHelpText>The tier start value</inlineHelpText>
        <label>From</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UsageRate__c</fullName>
        <description>The unit price for the tier</description>
        <inlineHelpText>The unit price for the tier</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Local_Currency_Code__c</fullName>
        <description>This field is used to store local currency code of a country</description>
        <label>Local Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>BAM</fullName>
                </value>
                <value>
                    <fullName>BDT</fullName>
                </value>
                <value>
                    <fullName>BGN</fullName>
                </value>
                <value>
                    <fullName>BHD</fullName>
                </value>
                <value>
                    <fullName>BOB</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>BYR</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>CRC</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>DOP</fullName>
                </value>
                <value>
                    <fullName>DZD</fullName>
                </value>
                <value>
                    <fullName>EEK</fullName>
                </value>
                <value>
                    <fullName>EGP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>GHS</fullName>
                </value>
                <value>
                    <fullName>GTQ</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>HNL</fullName>
                </value>
                <value>
                    <fullName>HRK</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <description>LC-8998: Used to perform data migration</description>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Migration_Key_Generator__c</fullName>
        <description>LC-8998: Used for master data key generation</description>
        <displayFormat>PME-{0000000}</displayFormat>
        <label>Migration Key Generator</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Partial_Save__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To store price matrix entry status if partially saved or not</description>
        <label>Partial Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Amount__c</fullName>
        <description>To store amount from which this price matrix entry cloned from</description>
        <label>Previous Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Review_by_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To store user lookup who reviewd this price matrix entry.</description>
        <label>Review by User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Price_Matrix_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Price Matrix Entry</label>
    <nameField>
        <displayFormat>ME-{0000000000}</displayFormat>
        <label>Matrix Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Matrix Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>